// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Border Color 1`] = `
Object {
  "borderColor": "currentColor",
}
`;

exports[`Border Color 2`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(255, 255, 255, var(--w-border-opacity))",
}
`;

exports[`Border Color 3`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(29, 78, 216, var(--w-border-opacity))",
}
`;

exports[`Border Color 4`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(239, 68, 68, var(--w-border-opacity))",
}
`;

exports[`Border Opacity 1`] = `
Object {
  "css": Object {
    "--w-border-opacity": "0",
  },
}
`;

exports[`Border Opacity 2`] = `
Object {
  "css": Object {
    "--w-border-opacity": "0.5",
  },
}
`;

exports[`Border Opacity 3`] = `
Object {
  "css": Object {
    "--w-border-opacity": "0.3",
  },
}
`;

exports[`Border Opacity 4`] = `
Object {
  "css": Object {
    "--w-border-opacity": "1",
  },
}
`;

exports[`Border Opacity With Different Trigger 1`] = `
Object {
  "css": Object {
    "--w-border-opacity": "0",
  },
}
`;

exports[`Border Opacity With Different Trigger 2`] = `
Object {
  "css": Object {
    "--w-border-opacity": "0.5",
  },
}
`;

exports[`Border Opacity With Different Trigger 3`] = `
Object {
  "css": Object {
    "--w-border-opacity": "0.3",
  },
}
`;

exports[`Border Opacity With Different Trigger 4`] = `
Object {
  "css": Object {
    "--w-border-opacity": "1",
  },
}
`;

exports[`Border Radius: 1 1`] = `
Object {
  "css": Object {
    "borderRadius": "100%",
  },
}
`;

exports[`Border Radius: default 1`] = `
Object {
  "css": Object {
    "borderRadius": "0.25rem",
  },
}
`;

exports[`Border Radius: full 1`] = `
Object {
  "css": Object {
    "borderRadius": "9999px",
  },
}
`;

exports[`Border Radius: lg 1`] = `
Object {
  "css": Object {
    "borderRadius": "0.5rem",
  },
}
`;

exports[`Border Radius: md 1`] = `
Object {
  "css": Object {
    "borderRadius": "0.375rem",
  },
}
`;

exports[`Border Radius: none 1`] = `
Object {
  "css": Object {
    "borderRadius": "0px",
  },
}
`;

exports[`Border Radius: sm 1`] = `
Object {
  "css": Object {
    "borderRadius": "0.125rem",
  },
}
`;

exports[`Border Radius: xl 1`] = `
Object {
  "css": Object {
    "borderRadius": "0.75rem",
  },
}
`;

exports[`Border Radius: xxl 1`] = `
Object {
  "css": Object {
    "borderRadius": "1rem",
  },
}
`;

exports[`Border Radius: xxxl 1`] = `
Object {
  "css": Object {
    "borderRadius": "1.5rem",
  },
}
`;

exports[`Border Style: dashed 1`] = `
Object {
  "css": Object {
    "borderStyle": "dashed",
  },
}
`;

exports[`Border Style: dotted 1`] = `
Object {
  "css": Object {
    "borderStyle": "dotted",
  },
}
`;

exports[`Border Style: double 1`] = `
Object {
  "css": Object {
    "borderStyle": "double",
  },
}
`;

exports[`Border Style: none 1`] = `
Object {
  "css": Object {
    "borderStyle": "none",
  },
}
`;

exports[`Border Style: solid 1`] = `
Object {
  "css": Object {
    "borderStyle": "solid",
  },
}
`;

exports[`Border Width 1`] = `
Object {
  "css": Object {
    "borderWidth": "0px",
  },
}
`;

exports[`Border Width 2`] = `
Object {
  "css": Object {
    "borderWidth": "4px",
  },
}
`;

exports[`Border Width 3`] = `
Object {
  "css": Object {
    "borderWidth": "1px",
  },
}
`;
